<resources>
    <string name="app_name">Launcher</string>
    <string name="large_text">
        "11时许，习近平发表重要讲话。他指出，建设一支强大的人民海军，寄托着中华民族向海图强的世代夙愿，是实现中华民族伟大复兴的重要保障。在中国共产党坚强领导下，人民海军一路劈波斩浪，纵横万里海疆，勇闯远海大洋，大踏步赶上时代发展潮流，取得了举世瞩目的伟大成就。今天的人民海军，正以全新姿态屹立于世界的东方！党和人民为英雄而光荣的人民海军感到骄傲和自豪！

        　　习近平要求海军将士们，全面贯彻党对军队绝对领导的根本原则和制度，切实加强党的建设，坚定理想信念，弘扬光荣传统，努力锻造听党指挥、政治过硬的海上劲旅。全面深化改革，大力推进科技创新，加快发展新型作战力量，着力构建现代海上作战体系，努力增强遂行多样化军事任务的能力和水平。全面落实战斗力标准，大抓实战化军事训练，保持高度戒备状态，时刻听从党和人民召唤，坚决捍卫国家权益，努力为维护世界和地区和平稳定作出新的更大的贡献。

        　　习近平表示坚信，人民海军一定能够不辱使命、不负重托，在新时代不断创造出更加辉煌的业绩！

        　　习近平的重要讲话，赢得长时间的热烈掌声。

        　　海上阅兵结束后，习近平察看了辽宁舰歼-15飞机起飞训练情况。轰鸣声中，4架战机先后腾空而起，直插云霄。尔后，习近平前往检阅舰海图室，在航泊日志上郑重签名。

        　　习近平对海军官兵一直牵挂在心。中午时分，他来到水兵餐厅，同水兵共进午餐，关切询问大家的学习、训练、生活情况。检阅舰停靠码头后，习近平在前甲板接见官兵，同大家亲切握手，合影留念。官兵们簇拥在习近平身旁，充满了幸福和喜悦。

        11时许，习近平发表重要讲话。他指出，建设一支强大的人民海军，寄托着中华民族向海图强的世代夙愿，是实现中华民族伟大复兴的重要保障。在中国共产党坚强领导下，人民海军一路劈波斩浪，纵横万里海疆，勇闯远海大洋，大踏步赶上时代发展潮流，取得了举世瞩目的伟大成就。今天的人民海军，正以全新姿态屹立于世界的东方！党和人民为英雄而光荣的人民海军感到骄傲和自豪！

        　　习近平要求海军将士们，全面贯彻党对军队绝对领导的根本原则和制度，切实加强党的建设，坚定理想信念，弘扬光荣传统，努力锻造听党指挥、政治过硬的海上劲旅。全面深化改革，大力推进科技创新，加快发展新型作战力量，着力构建现代海上作战体系，努力增强遂行多样化军事任务的能力和水平。全面落实战斗力标准，大抓实战化军事训练，保持高度戒备状态，时刻听从党和人民召唤，坚决捍卫国家权益，努力为维护世界和地区和平稳定作出新的更大的贡献。

        　　习近平表示坚信，人民海军一定能够不辱使命、不负重托，在新时代不断创造出更加辉煌的业绩！

        　　习近平的重要讲话，赢得长时间的热烈掌声。

        　　海上阅兵结束后，习近平察看了辽宁舰歼-15飞机起飞训练情况。轰鸣声中，4架战机先后腾空而起，直插云霄。尔后，习近平前往检阅舰海图室，在航泊日志上郑重签名。

        　　习近平对海军官兵一直牵挂在心。中午时分，他来到水兵餐厅，同水兵共进午餐，关切询问大家的学习、训练、生活情况。检阅舰停靠码头后，习近平在前甲板接见官兵，同大家亲切握手，合影留念。官兵们簇拥在习近平身旁，充满了幸福和喜悦。

        "
    </string>
    <string name="action_settings">Settings</string>
    <string name="room_service">客房服务</string>
    <string name="more">更多</string>
    <string name="vip_service">会员服务</string>
    <string name="app_title_text">精选APP</string>
    <string name="app_item_icon">APP图标</string>
    <string name="app_item_title">APP标题</string>
    <string name="app_item_desc">APP描述</string>
    <string name="app_item_favorites">APP好评</string>
    <string name="app_item_size">APP大小</string>
    <string name="app_btn_open">打开</string>
    <string name="app_btn_install">安装</string>
    <string name="app_btn_downloading">下载中</string>
    <string name="app_btn_pause">暂停</string>
    <string name="app_btn_continue">继续安装</string>
    <string name="app_btn_installing">安装中</string>
    <string name="app_list_advert">APP列表广告</string>
    <string name="sure_call_voip">是否呼叫%1$s？</string>
    <string name="hotel_scan_qr_hint">请使用微信扫码\n享受秀豹高速专属网络</string>
</resources>
